# docs/openapi-definition/openapi.json
@@ -14,6 +14,9 @@
   "tags" : [ {
     "name" : "Account Operations",
     "description" : "Operations for account management"
+  }, {
+    "name" : "Authenticate Operations",
+    "description" : "Operations for Authentication"
   } ],
   "paths" : {
     "/api/v1/account" : {
@@ -162,6 +165,32 @@
               "application/json" : {
                 "schema" : {
                   "type" : "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/auth/login" : {
+      "post" : {
+        "tags" : [ "Authenticate Operations" ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/AuthRequest"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "string"
                 }
               }
             }
@@ -400,6 +429,29 @@
             "type" : "string"
           },
           "phoneNumber" : {
+            "type" : "string"
+          },
+          "roles" : {
+            "$ref" : "#/components/schemas/AccountRole"
+          }
+        }
+      },
+      "AccountRole" : {
+        "type" : "object",
+        "properties" : {
+          "roleId" : {
+            "format" : "int64",
+            "type" : "integer"
+          },
+          "roleName" : {
+            "type" : "string"
+          }
+        }
+      },
+      "AuthRequest" : {
+        "type" : "object",
+        "properties" : {
+          "accountName" : {
             "type" : "string"
           },
           "password" : {
