# src/main/java/com/example/application/model/request/AuthRequest.java
@@ -1,0 +1,4 @@
+package com.example.application.model.request;
+
+public record AuthRequest(String accountName, String password) {
+}
