# src/main/java/com/example/application/model/response/AccountRoleResponse.java
@@ -1,0 +1,7 @@
+package com.example.application.model.response;
+
+public record AccountRoleResponse(
+        long roleId,
+        String roleName
+) {
+}
