# src/main/java/com/example/domain/entity/value/AccountRole.java
@@ -1,0 +1,16 @@
+package com.example.domain.entity.value;
+
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+public class AccountRole {
+    private Long roleId;
+    private String roleName;
+}
